// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TitleEditor/Default matches snapshot 1`] = `
<div>
  <div
    class="group flex items-start gap-2"
  >
    <h1
      class="text-foreground flex-1 text-2xl leading-tight font-semibold"
    >
      Fix login page crash on empty email
      <span
        class="text-muted-foreground ml-2 text-xl font-normal"
      >
        #
        a1b2c3
      </span>
    </h1>
    <button
      class="text-muted-foreground hover:text-foreground mt-1 shrink-0 opacity-0 transition-opacity group-hover:opacity-100"
      title="Edit title"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`TitleEditor/LongTitle matches snapshot 1`] = `
<div>
  <div
    class="group flex items-start gap-2"
  >
    <h1
      class="text-foreground flex-1 text-2xl leading-tight font-semibold"
    >
      Very long issue title that spans multiple lines and tests how the component handles overflow in the layout
      <span
        class="text-muted-foreground ml-2 text-xl font-normal"
      >
        #
        d4e5f6
      </span>
    </h1>
    <button
      class="text-muted-foreground hover:text-foreground mt-1 shrink-0 opacity-0 transition-opacity group-hover:opacity-100"
      title="Edit title"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-pencil size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
        />
        <path
          d="m15 5 4 4"
        />
      </svg>
    </button>
  </div>
</div>
`;
